fx: fix english roulette layout, refactor